--- a/templates/inventory/update_item.html
+++ b/templates/inventory/update_item.html
@@ -48,7 +48,7 @@
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(255, 253, 253, 0.1);
   ">Ordered</span>
-    {% else %}
+    {% elif not item.ordered and not item.from_warehouse and not item.was_for_job %}
       <span style="
   display: inline-block;
   padding: 5px 10px;
@@ -75,6 +75,20 @@
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(255, 253, 253, 0.1);
   ">From warehouse</span>
+    {% endif %}
+    {% if item.was_for_job and item.from_warehouse %}
+      <span style="
+    display: inline-block;
+    padding: 5px 10px;
+    margin-left: 10px;
+    font-size: 1.2rem;
+    font-weight: normal;
+    color: rgb(0, 0, 0);
+    background-color:rgba(119, 163, 192, 0.79);
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    box-shadow: 0 1px 3px rgba(255, 253, 253, 0.1);
+  ">Was for {{ item.was_for_job }}</span>
     {% endif %}
   </h2>
 
