--- a/templates/inventory/inventory.html
+++ b/templates/inventory/inventory.html
@@ -21,10 +21,10 @@
           </small>
         </h2>
         <h4><a href="{% url 'item_add' job.job_id %}">Add item</a></h4>
-      {% elif job.items.count == 0 and not job.status == 'ready' %}
+      {% elif job.items.count == 0 and not job.status == 'ready' and job.status != 'cancelled' %}
         <h2>
           Job ID: <a href="{% url 'update_job' job.job_id %}">{{ job.job_id }}</a> - Status: {{ job.get_status_display }} <br /><small style="color: rgb(0, 129, 43);">
-            No parts, is this job ready?<form action="{% url 'inventory' job.job_id %}" method="POST">
+            No parts needed, is this job ready?<form action="{% url 'inventory' job.job_id %}" method="POST">
               {% csrf_token %}
               <small><button name="job_is_ready" type="submit" class="btn btn-submit">Yes</button></small>
             </form>
@@ -40,7 +40,7 @@
         font-size: 1.2rem;
         font-weight: normal;
         color: rgb(255, 255, 255);
-        background-color: rgb(92, 21, 48);
+        background-color: rgb(131, 25, 108);
         border: 1px solid #ddd;
         border-radius: 5px;
         box-shadow: 0 1px 3px rgba(255, 255, 255, 0.1);
@@ -70,19 +70,21 @@
         {% for jobitem in job.items.all %}
           <li>
             <a href="{% url 'update_item' jobitem.id %}">{{ jobitem.item.name }}</a> - Part Number: {{ jobitem.item.part_number }} - Price: ${{ jobitem.item.price }}
-            {% if jobitem.status == 'arrived' %}
+            {% if jobitem.status == 'arrived' and not jobitem.is_used %}
               <span style="color: rgb(0, 0, 0);background-color: rgb(17, 255, 9);border: 1000px;border-radius: 25%;">{{ jobitem.get_status_display }}</span>
-            {% elif jobitem.ordered and not jobitem.from_warehouse %}
+            {% elif jobitem.ordered and not jobitem.from_warehouse and not jobitem.is_used %}
               <span style="color: rgb(0, 0, 0);background-color: rgba(228, 216, 51, 0.99);border: 1000px;border-radius: 25%;">Ordered</span>
-            {% elif jobitem.was_for_job and jobitem.from_warehouse %}
+            {% elif jobitem.was_for_job and jobitem.from_warehouse and not jobitem.is_used %}
               <span style="color: rgb(0, 0, 0);background-color: rgba(119, 163, 192, 0.79);border: 1000px;border-radius: 25%;">was for job {{ jobitem.was_for_job }}</span>
-            {% elif jobitem.from_warehouse %}
+            {% elif jobitem.from_warehouse and not jobitem.is_used %}
               <span style="color: rgb(0, 0, 0);background-color: rgba(157, 119, 192, 0.79);border: 1000px;border-radius: 25%;">From warehouse</span>
+            {% elif jobitem.is_used %}
+              <span style="color: rgb(255, 255, 255);background-color: rgba(54, 8, 8, 0.79);border: 1000px;border-radius: 25%;">Used</span>
             {% else %}
               <span style="color: rgb(0, 0, 0);background-color: rgba(255, 98, 98, 0.99);border: 1000px;border-radius: 25%;">Not ordered</span>
             {% endif %}
-            {% if jobitem.item.notes and job.status != 'completed' %}
-              <small>{{ jobitem.item.notes }}</small> <form action="{% url 'inventory' jobitem.id %}" method="POST">
+            {% if jobitem.notes and job.status != 'completed' %}
+              <small>{{ jobitem.notes }}</small> <form action="{% url 'inventory' jobitem.id %}" method="POST">
                 {% csrf_token %}
                 <small><button name="reset_notes" type="submit" class="btn btn-danger">It's not used</button></small>
               </form>
@@ -101,7 +103,7 @@
     border-radius: 10px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
       ">Used</span>
-              {{ item.item.notes }}
+              {{ item.notes }}
             {% endif %}
           </li>
         {% empty %}
@@ -110,6 +112,21 @@
       </ul>
       <hr />
     {% endfor %}
+    <div class="pagination">
+      {% if page_obj.has_previous %}
+        <a href="?page=1">&laquo; first</a>
+
+        <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+      {% endif %}
+
+      <span>Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
+
+      {% if page_obj.has_next %}
+        <a href="?page={{ page_obj.next_page_number }}">next</a>
+        <br />
+        <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+      {% endif %}
+    </div>
   {% endif %}
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
   {% comment %} <script>
