--- a/templates/inventory/add_item copy.html
+++ b/templates/inventory/add_item copy.html
@@ -28,31 +28,16 @@
       </div>
     </form>
     {% if job %}
-      <div id="toggle-stock-items">
-        <form method="post" action="">
-          {% csrf_token %}
+      <form id="stock-items-form-container" action="" method="POST" enctype="multipart/form-data" class="form-container">
+        {% csrf_token %}
 
-          <input name="search_query" placeholder="search with part number" value="{{ query }}" />
-          <button type="submit" name="searching_warehouse">Search</button>
-          <button type="submit" name="reset_search">Reset</button>
-        </form>
-        <br />
-        <form method="post" action="">
-          {% csrf_token %}
-          <ul>
-            {% for item in warehouse_items %}
-              <li>
-                <label>
-                  <input type="radio" name="selected_item_id" value="{{ item.id }}" required />
-                  {{ item.item.name }} | {{ item.item.part_number }} | {{ item.item.supplier }} | Qty: {{ item.warehouse_quantity }}
-                </label>
-              </li>
-            {% endfor %}
-          </ul>
-          <input type="number" name="required_quantity" min="1" placeholder="Quantity" required />
-          <button type="submit" name="adding_from_stock">Add</button>
-        </form>
-      </div>
+        <div class="form-group">{{ stock_items_form.as_p }}</div>
+
+        <div class="form-group">
+          <button type="submit" name="adding_from_stock" class="btn-submit">Add part</button>
+          <button type="submit" name="searching_warehouse" class="btn-submit">Search</button>
+        </div>
+      </form>
     {% endif %}
   </section>
   <script>
