--- a/templates/inventory/job_update.html
+++ b/templates/inventory/job_update.html
@@ -1,6 +1,6 @@
 {% extends 'inventory/base.html' %}
 {% load static %}
-
+{% load custom_tags %}
 {% block body %}
   {% if messages %}
     {% for message in messages %}
@@ -48,13 +48,17 @@
       ">Quoted: $<span style="color: rgb(34, 41, 4);">{{ job.quotation }}</span></span>
     {% endif %}
   </h2>
+  <h3>Unique items= {{ job.items.count }} Total required items={{ job|total_quantity }} Arrived={{ job|total_arrived_quantity }}</h3>
 
+  {% if job.status == 'paused' or job.status == 'ready' %}
+    <h4><a href="{% url 'item_add' job.job_id %}">Add item</a></h4>
+  {% endif %}
   <section class="form-section">
     <form action="" method="POST" enctype="multipart/form-data" class="form-container">
       {% csrf_token %}
 
       <div id="id_quotation">
-        <label for="quotation" style="color: rgb(0, 124, 206);">Add quotation price</label>
+        <label for="quotation" style="color: rgb(0, 124, 206);">Add price quotation</label>
         <input type="floatformat" step="0.01" name="quotation" style="background-color: rgb(56, 167, 12);" />
       </div>
 
@@ -80,9 +84,51 @@
     </form>
   </section>
 
-  {% for item in items %}
-    {{ item }}
-  {% endfor %}
+  <ol>
+    {% for jobitem in job.items.all %}
+      <li>
+        <a href="{% url 'update_item' jobitem.id %}">{{ jobitem.item.name }}</a> - Part Number: {{ jobitem.item.part_number }} - Price: ${{ jobitem.item.price }}
+        {% if jobitem.arrived and not jobitem.is_used %}
+          <span style="color: rgb(0, 0, 0);background-color: rgb(17, 255, 9);border: 1000px;border-radius: 25%;">Arrived</span>
+        {% elif jobitem.ordered and not jobitem.from_warehouse and not jobitem.is_used %}
+          <span style="color: rgb(0, 0, 0);background-color: rgba(228, 216, 51, 0.99);border: 1000px;border-radius: 25%;">Ordered</span>
+        {% elif jobitem.was_for_job and jobitem.from_warehouse and not jobitem.is_used %}
+          <span style="color: rgb(0, 0, 0);background-color: rgba(119, 163, 192, 0.79);border: 1000px;border-radius: 25%;">was for job {{ jobitem.was_for_job }}</span>
+        {% elif jobitem.from_warehouse and not jobitem.is_used %}
+          <span style="color: rgb(0, 0, 0);background-color: rgba(157, 119, 192, 0.79);border: 1000px;border-radius: 25%;">From warehouse</span>
+        {% elif jobitem.is_used %}
+          <span style="color: rgb(255, 255, 255);background-color: rgba(54, 8, 8, 0.79);border: 1000px;border-radius: 25%;">Used</span>
+        {% else %}
+          <span style="color: rgb(0, 0, 0);background-color: rgba(255, 98, 98, 0.99);border: 1000px;border-radius: 25%;">Not ordered</span>
+        {% endif %}
+        {% if jobitem.notes and job.status != 'completed' %}
+          <small>{{ jobitem.notes }}</small> <form action="{% url 'inventory' jobitem.id %}" method="POST">
+            {% csrf_token %}
+            <small><input type="hidden" name="coming_from_job" value="coming_from_job" /><button name="reset_notes" type="submit" class="btn btn-danger">It's not used</button></small>
+          </form>
+        {% endif %}
+
+        {% if jobitem.item.is_used %}
+          <span style="
+        display: inline-block;
+padding: 1px 10px;
+margin-left: 10px;
+font-size: 1.2rem;
+font-weight: normal;
+color: #333;
+background-color: rgba(182, 182, 182, 0.79);
+border: 1px solid #ddd;
+border-radius: 10px;
+box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  ">Used</span>
+          {{ item.notes }}
+        {% endif %}
+      </li>
+    {% empty %}
+      <li>No items associated with this job.</li>
+    {% endfor %}
+  </ol>
+
   <section>
     <h3>Comments</h3>
     <div class="comments-container">
