--- a/templates/inventory/inventory.html
+++ b/templates/inventory/inventory.html
@@ -66,7 +66,7 @@
             {% for jobitem in job.items.all %}
               <li>
                 <a href="{% url 'update_item' jobitem.id %}">{{ jobitem.item.name }}</a> - Part Number: {{ jobitem.item.part_number }} - Price: ${{ jobitem.item.price }}
-                {% if jobitem.arrived and not jobitem.is_used %}
+                {% if jobitem.arrived and not jobitem.is_used and not jobitem.from_warehouse %}
                   <span class="tag arrived">Arrived</span>
                 {% elif jobitem.ordered and not jobitem.from_warehouse and not jobitem.is_used %}
                   <span class="tag ordered">Ordered</span>
