--- a/templates/inventory/batch_entry.html
+++ b/templates/inventory/batch_entry.html
@@ -26,7 +26,7 @@
         <input type="hidden" name="price" value="{{ item.price }}" />
         <input type="hidden" name="supplier" value="{{ item.supplier }}" />
         <input type="hidden" name="arrived_quantity" value="{{ item.arrived_quantity }}" />
-
+        <input type="hidden" name="category" value="{{ item.category }}" />
         <p>
           <strong>Name:</strong> {{ item.name }}
         </p>
@@ -45,7 +45,9 @@
         <p>
           <strong>Arrived Quantity:</strong> {{ item.arrived_quantity }}
         </p>
-
+        <p>
+          <strong>Category:</strong> {{ item.category }}
+        </p>
         <button type="submit">Add to the warehouse</button>
       </form>
       <hr />
