--- a/templates/inventory/company_settings.html
+++ b/templates/inventory/company_settings.html
@@ -2,25 +2,27 @@
 {% load static %}
 
 {% block body %}
-  <h1>Signup</h1>
+  <h1>Add new engineer</h1>
   {% if messages %}
     {% for message in messages %}
-      <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+      <div class="alert alert-{{ message.tags }}">{{ message|safe }}</div>
     {% endfor %}
   {% endif %}
-
+  {% if messages %}
+    {% for message in messages %}
+      <div class="alert alert-{{ message.tags }}">
+        <p>{{ message|safe }}</p> {% comment %}dded safe as django skip html{% endcomment %}
+      </div>
+    {% endfor %}
+  {% endif %}
   <form action="" method="POST">
     {% csrf_token %}
-    <h4>Company's details</h4>
-    {{ company_form.as_p }}
-    <hr />
-    <h4>Owner's details</h4>
-    {{ user_form.as_p }}
-    <button type="submit" name="signup" class="btn btn-primary">Signup</button><Span>
-      Already a user? <a href="{% url 'login' %}">Login</a>
-    </Span>
+    {{ form.as_p }}
+    <button type="submit" class="btn btn-primary">Add engineer</button>
   </form>
+
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 {% endblock %}
